cmake_minimum_required(VERSION 3.13)
project(TEST)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)

option(GENERATE_DEBUG_INFO "Generate debug info files" OFF)


message("CMAKE_CXX_COMPILER_LAUNCHER: ${CMAKE_CXX_COMPILER_LAUNCHER}")
message("CMAKE_C_COMPILER_LAUNCHER: ${CMAKE_C_COMPILER_LAUNCHER}")
message("GENERATE_DEBUG_INFO: ${GENERATE_DEBUG_INFO}")

add_executable(test main.cpp)